--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitHub Explorer</title>
 </head>
-
 <body>
+<div id="root"></div>
 
+<script src="../dist/bundle.js"></script>
 </body>
 
 </html>
